objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <description>Field value taken from Address</description>
        <label>Billing County</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Connect_Company_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, D&amp;B Connect populates this field that links the Account record to a specific D-U-N-S Number for display of a custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, D&amp;B Connect populates this field that links the Account record to a specific D-U-N-S Number for display of a custom object with D&amp;B data.</inlineHelpText>
        <label>D&amp;B Connect Company Profile</label>
        <referenceTo>DNBConnect__D_B_Connect_Company_Profile__c</referenceTo>
        <relationshipLabel>DBConnectAccountCompanyProfile</relationshipLabel>
        <relationshipName>DBConnectAccountCompanyProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Confidence_Code__c</fullName>
        <description>A numeric value from 1 (low) up to 10 (high) indicating the level of certainty at which this possible candidate was included in this result set.</description>
        <inlineHelpText>A numeric value from 1 (low) up to 10 (high) indicating the level of certainty at which this possible candidate was included in this result set.</inlineHelpText>
        <label>D&amp;B Match Confidence Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Data_Profile__c</fullName>
        <description>The information that the matching process used to arrive at a match in addition to the application&apos;s business rules and parameters specified by the requestor. This is a 28-byte string consisting of 14 components of 2 bytes each. The 14 components are, in order, Name, Street Number, Street Name, Town Name, Territory Name, P.O. Box, Telephone, Post Code, D-U-N-S Number, Industry Code, Geographical Density, Location Uniqueness, Registration Number and URL.</description>
        <inlineHelpText>The information that the matching process used to arrive at a match in addition to the application&apos;s business rules and parameters specified by the requestor. This is a 28-byte string consisting of 14 components of 2 bytes each. The 14 components are, in order, Name, Street Number, Street Name, Town Name, Territory Name, P.O. Box, Telephone, Post Code, D-U-N-S Number, Industry Code, Geographical Density, Location Uniqueness, Registration Number and URL.</inlineHelpText>
        <label>D&amp;B Match Data Profile</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Grade__c</fullName>
        <description>The compound rating that comprises one rating per type of data scored by a match engine. For example, in AABZBAAAFBZ the &quot;A&quot;; in the 1st position means that the Name scored between 80-100 and the &quot;A&quot;; in the 2nd position means that the Street Number had to score exactly 100. For more details, please see the Identity Resolution guide.</description>
        <inlineHelpText>The compound rating that comprises one rating per type of data scored by a match engine. For example, in AABZBAAAFBZ the &quot;A&quot;; in the 1st position means that the Name scored between 80-100 and the &quot;A&quot;; in the 2nd position means that the Street Number had to score exactly 100. For more details, please see the Identity Resolution guide.</inlineHelpText>
        <label>D&amp;B Match Grade</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Match_Type__c</fullName>
        <description>The type of match performed to identify the identified entity. May be one of the following:
DUNS Number Lookup: D-U-N-S Number was used to perform match.
Name and Address Lookup: Name and Address were used to perform match.
National ID Lookup: Registration Number was used to perform match.
Telephone Number Lookup: Telephone Number was used to perform match.
ZIP Code Lookup: Postal Code was used to perform match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</description>
        <inlineHelpText>The type of match performed to identify the identified entity. May be one of the following:
DUNS Number Lookup: D-U-N-S Number was used to perform match.
Name and Address Lookup: Name and Address were used to perform match.
National ID Lookup: Registration Number was used to perform match.
Telephone Number Lookup: Telephone Number was used to perform match.
ZIP Code Lookup: Postal Code was used to perform match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</inlineHelpText>
        <label>D&amp;B Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Name_Match_Score__c</fullName>
        <description>A number from -1 to 100 (including decimals) that indicates the detailed level of match on the name of the matched candidate.
0 indicates no match.
100 indicates most accurate match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</description>
        <inlineHelpText>A number from -1 to 100 (including decimals) that indicates the detailed level of match on the name of the matched candidate.
0 indicates no match.
100 indicates most accurate match.
Note: This parameter is not applicable for Multi-Process High-Volume Match.</inlineHelpText>
        <label>D&amp;B Name Match Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBConnect__dunsTradedUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the D-U-N-S value on this record has been Traded Up. The D-U-N-S Trade Up feature enables D&amp;B Connect to enrich records with HQ location data directly into records matched at lower levels of the corporate family tree.</description>
        <inlineHelpText>This field indicates if the D-U-N-S value on this record has been Traded Up. The D-U-N-S Trade Up feature enables D&amp;B Connect to enrich records with HQ location data directly into records matched at lower levels of the corporate family tree.</inlineHelpText>
        <label>D-U-N-S Traded Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNBConnect__matchedDuns__c</fullName>
        <description>This field can be different from the D-U-N-S value held in the custom object. Refer to your D-U-N-S Trade Up settings within your project setup for more details on how this match was made.</description>
        <inlineHelpText>This field can be different from the D-U-N-S value held in the custom object. Refer to your D-U-N-S Trade Up settings within your project setup for more details on how this match was made.</inlineHelpText>
        <label>Matched D-U-N-S</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Not Enriched - Not Under Management</fullName>
                </value>
                <value>
                    <fullName>Error Occurred in Scheduled Enrich</fullName>
                </value>
                <value>
                    <fullName>Error Occurred in Instant Enrich</fullName>
                </value>
                <value>
                    <fullName>Insufficient Credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo.</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employer_Account_Status__c</fullName>
        <description>Used by the Employer team to mark the status of an account as it pertains to the Employer channel.</description>
        <inlineHelpText>Used by the Employer team to mark the status of an account as it pertains to the Employer channel.</inlineHelpText>
        <label>Employer Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business Target</fullName>
                </value>
                <value>
                    <fullName>Expansion Target</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Altify_Account__c</fullName>
        <label>Has Altify Account</label>
        <summaryForeignKey>ALTF__Account__c.ALTF__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_6_Month_passed_after_client_status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has it been more than 6 months since this Account has become a client?</description>
        <label>6 Month passed after client status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_8A_Certified_Business_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>8A Certified Business Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Health_Description__c</fullName>
        <formula>IF(ISPICKVAL(L2O_Account_Health_Risk_Rating__c, &quot;Green&quot;),&quot; Everything is good&quot;,
IF(ISPICKVAL(L2O_Account_Health_Risk_Rating__c, &quot;Orange&quot;),&quot; Unhappy and potential for RFP&quot;,
IF(ISPICKVAL(L2O_Account_Health_Risk_Rating__c,&quot;Blue&quot;),&quot;Lower enrollment / utilization but generally no issues&quot;,
       IF(ISPICKVAL(L2O_Account_Health_Risk_Rating__c,&quot;Yellow&quot;),&quot;Middle of the road participation and doesn’t engage often&quot;,
             IF(ISPICKVAL(L2O_Account_Health_Risk_Rating__c,&quot;Red&quot;),&quot;Significant issues putting renewal at high risk&quot;,
                IF(ISPICKVAL(L2O_Account_Health_Risk_Rating__c,&quot;Black&quot;),&quot;Confirmed or forecasted termination&quot;,
                  null)
                )
          )
       )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Health Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Health_Notes__c</fullName>
        <description>Enter additional Account Health information.</description>
        <inlineHelpText>Format for Notes: MM/DD/YYY (Initials) : Notes</inlineHelpText>
        <label>Account Health Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Health_Risk_Rating__c</fullName>
        <description>Select value from picklist :
Green - No issues; client is retained
Blue - Lower enrollment/utilization but generally no issues.
Yellow - Intent expressed issues are impacting but not at high risk
Red - Significant issues putting renewal at risk/ no clear intention expressed.
Black - Confirmed or forecasted termination.</description>
        <label>Account Health &amp; Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#78C953</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Blue</fullName>
                    <color>#0B6FCE</color>
                    <label>Blue</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Black</fullName>
                    <color>#000000</color>
                    <label>Black</label>
                </value>
                <value>
                    <fullName>Orange</fullName>
                    <color>#E27001</color>
                    <label>Orange</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Account_Health__c</fullName>
        <formula>IF( TEXT( L2O_Account_Health_Risk_Rating__c ) == &apos;Green&apos;, 
    IMAGE(&quot;/resource/1660904794000/L2O_GreenBubble&quot;, &quot;Green&quot;,20,20),
IF( TEXT( L2O_Account_Health_Risk_Rating__c ) == &apos;Orange&apos;, 
    IMAGE(&quot;/resource/1660904793000/L2O_OrangeBubble&quot;, &quot;Orange&quot;,20,20),
    IF( TEXT( L2O_Account_Health_Risk_Rating__c ) == &apos;Black&apos;, 
        IMAGE(&quot;/resource/1660906091000/L2O_BlackBubble&quot;, &quot;Black&quot;,20,20),
        IF( TEXT( L2O_Account_Health_Risk_Rating__c ) == &apos;Red&apos;, 
            IMAGE(&quot;/resource/1660905969000/L2O_RedBubble&quot;, &quot;Red&quot;,20,20),
            IF( TEXT( L2O_Account_Health_Risk_Rating__c ) == &apos;Yellow&apos;, 
                IMAGE(&quot;/resource/1660906140000/L2O_YellowBubble&quot;, &quot;Yellow&quot;,20,20),
                IF( TEXT( L2O_Account_Health_Risk_Rating__c ) == &apos;Blue&apos;, 
                    IMAGE(&quot;/resource/1660906038000/L2O_BlueBubble&quot;, &quot;Blue&quot;,20,20),
                     null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Hierarchy_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark the checkbox to &quot;True&quot; to show an update was made to a newly created Account.</description>
        <label>Account Hierarchy Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Legal_Name__c</fullName>
        <description>Enter the Account Institution&apos;s Legal Name</description>
        <inlineHelpText>Enter the Account Institution&apos;s Legal Name</inlineHelpText>
        <label>Account Legal Name</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Next_Steps__c</fullName>
        <description>Date of entry and next steps to move account forward</description>
        <inlineHelpText>Date of entry and next steps to move account forward</inlineHelpText>
        <label>Account Next Steps</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Account_Size__c</fullName>
        <description>Size of Account</description>
        <label>Account Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small &amp; Midsized (1-100)</fullName>
                </value>
                <value>
                    <fullName>Medium / Large (101-999)</fullName>
                </value>
                <value>
                    <fullName>Enterprise (1,000+)</fullName>
                </value>
                <value>
                    <fullName>A: 25,000+</fullName>
                    <isActive>false</isActive>
                    <label>A: 25,000+</label>
                </value>
                <value>
                    <fullName>B: 11,000-24,999</fullName>
                    <isActive>false</isActive>
                    <label>B: 11,000-24,999</label>
                </value>
                <value>
                    <fullName>C: 7,000-10,999</fullName>
                    <isActive>false</isActive>
                    <label>C: 7,000-10,999</label>
                </value>
                <value>
                    <fullName>D: 5,000-6,999</fullName>
                    <isActive>false</isActive>
                    <label>D: 5,000-6,999</label>
                </value>
                <value>
                    <fullName>E: 3,000-4,999</fullName>
                    <isActive>false</isActive>
                    <label>E: 3,000-4,999</label>
                </value>
                <value>
                    <fullName>Extra Large</fullName>
                    <isActive>false</isActive>
                    <label>Extra Large</label>
                </value>
                <value>
                    <fullName>Extra Small</fullName>
                    <isActive>false</isActive>
                    <label>Extra Small</label>
                </value>
                <value>
                    <fullName>F: 2,000-2,999</fullName>
                    <isActive>false</isActive>
                    <label>F: 2,000-2,999</label>
                </value>
                <value>
                    <fullName>G: 1,000-1,999</fullName>
                    <isActive>false</isActive>
                    <label>G: 1,000-1,999</label>
                </value>
                <value>
                    <fullName>H: 350-999</fullName>
                    <isActive>false</isActive>
                    <label>H: 350-999</label>
                </value>
                <value>
                    <fullName>I: 1-349</fullName>
                    <isActive>false</isActive>
                    <label>I: 1-349</label>
                </value>
                <value>
                    <fullName>Jumbo</fullName>
                    <isActive>false</isActive>
                    <label>Jumbo</label>
                </value>
                <value>
                    <fullName>Large</fullName>
                    <isActive>false</isActive>
                    <label>Large</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <isActive>false</isActive>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Small</fullName>
                    <isActive>false</isActive>
                    <label>Small</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Account_Status__c</fullName>
        <description>Customer: Site is the financial owner of a patient access device. There may or may not be devices installed here.
Spoke: Site does not own an endpoint but they have one installed at this location.
Non-Customer: No devices owned by or at this site.</description>
        <inlineHelpText>&quot;Customer: Site is the financial owner of a patient access device. There may or may not be devices installed here.
    Spoke: Site does not own an endpoint but they have one installed at this location.
     Non-Customer: No devices owned by or at this site.&quot;</inlineHelpText>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Former Client</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>New Business Target</fullName>
                    <isActive>false</isActive>
                    <label>New Business Target</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Account_Sub_type__c</fullName>
        <label>Account Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2O_Account_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health System</fullName>
                </value>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Benefit Consultant</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Life insurance</fullName>
                </value>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Death insurance</fullName>
                </value>
                <value>
                    <fullName>General Insurance</fullName>
                </value>
                <value>
                    <fullName>Travel insurance</fullName>
                </value>
                <value>
                    <fullName>Benefit program</fullName>
                </value>
                <value>
                    <fullName>Sport Insurance</fullName>
                </value>
                <value>
                    <fullName>Card Insurance</fullName>
                </value>
                <value>
                    <fullName>Car Insurance</fullName>
                </value>
                <value>
                    <fullName>Dental Insurance</fullName>
                </value>
                <value>
                    <fullName>Home Insurance</fullName>
                </value>
                <value>
                    <fullName>Labor Insurance</fullName>
                </value>
                <value>
                    <fullName>Life and Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Personal Insurance</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Account_Type__c</fullName>
        <description>Type of Account</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Hospital &amp; Health System</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Insurer</fullName>
                </value>
                <value>
                    <fullName>Lessor</fullName>
                </value>
                <value>
                    <fullName>HHS</fullName>
                    <isActive>false</isActive>
                    <label>HHS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Amend_Asset_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is updated via the Manage Install Base LWC and used to create an Opportunity Contact Role for Asset only amendments</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The contact does not exist or does belong to the account</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Amendment_Opportunity_SubType__c</fullName>
        <description>To capture the Amendment Opportunity Sub Type 
[Transaction Type] via the Manage Install Base account
 button for amendment flow.</description>
        <label>Amendment Opportunity SubType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Broadcast_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be updated to &quot;True&quot; when an Account is sent down with its Order details</description>
        <label>Broadcast Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Business_Region__c</fullName>
        <description>Region this Account is selling out of</description>
        <label>Business Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Business_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Charter_Type__c</fullName>
        <label>Charter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Client_Code__c</fullName>
        <description>Used for INTL only - unique identifier assigned to the Account.</description>
        <label>Client Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Client_Termination_Rationale__c</fullName>
        <description>The rationale on why this Account is now a former client.</description>
        <label>Client Termination Rationale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Client_VAT_Number__c</fullName>
        <description>Used for INTL only - unique tax code associated to each Account</description>
        <label>Client VAT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Client_status_date__c</fullName>
        <description>Date the Account became a client</description>
        <label>Client status date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Company_Email_Address__c</fullName>
        <label>Company Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>L2O_Countries_of_Operation__c</fullName>
        <description>Country Account conducts business in</description>
        <label>Countries of Operation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Great Britain</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Slovenia</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Customer_Category_Code__c</fullName>
        <description>Used for ERP - Manual field to track the customer categories</description>
        <label>Customer Category Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_DHC_Est_of_Births__c</fullName>
        <label>DHC Est. # of Births</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_DHC_Est_of_ER_Visits__c</fullName>
        <description>Enrichment field as part of definitive healthcare tool</description>
        <label>DHC Est # of ER Visits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_DHC_Est_of_Outpatient_Visits__c</fullName>
        <label>DHC Est. # of Outpatient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_DHC_Telemedicine_Vendor_App__c</fullName>
        <description>Enrichment field as part of definitive healthcare tool</description>
        <label>DHC Telemedicine Vendor/App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_DHC_of_NICU_Beds__c</fullName>
        <label>DHC # of NICU Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_DHC_of_NICU_Days__c</fullName>
        <description>Enrichment field as part of definitive healthcare tool</description>
        <label>DHC # of NICU Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_D_U_Ns_Number__c</fullName>
        <description>Unique identifier as part of the DNB enrichment tool</description>
        <externalId>true</externalId>
        <label>D-U-Ns Number</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Fortune_1000_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fortune 1000 Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_GUID__c</fullName>
        <description>System Generated Global Unique Id</description>
        <externalId>true</externalId>
        <inlineHelpText>System Generated Global UniqueId</inlineHelpText>
        <label>GUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Invoicing_Country__c</fullName>
        <description>Pulled from the Billing Address</description>
        <label>Invoicing Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2O_Business_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>L2O_Invoicing_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Last_Integration_Date__c</fullName>
        <description>Last datetime the transaction was processed downstream</description>
        <label>Last Integration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Last_Referral_Date__c</fullName>
        <description>Date Account was last referred by</description>
        <label>Last Referral Date</label>
        <type>Date</type>
    </fields>
</CustomObject>